# open-cl-tests

devicequery/: build.sh
test1/: CMakeLists.txt  OpenCL_Test1.cpp
